# FileTransfer

./: README.md  app.py  app_requirements.txt  main.py  models.py  pyproject.toml  replit.nix  requirements.txt  run.sh  setup_windows.bat  utils.py
attached_assets/: Pasted-Python-Based-File-Sharing-Web-App-with-Secure-64-Byte-Key-Lock-This-web-application-enables-users-t-1742912909351.txt
instance/: filelock.db
migrations/versions/: b37cfa4a3f1b_add_email_and_password_hash_fields_to_.py
static/css/: style.css
static/js/: script.js
templates/: base.html  index.html  large_upload.html  login.html  mobile_upload.html  signup.html  upload.html
