[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "qrcode>=8.0",
    "sqlalchemy>=2.0.39",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "flask-migrate>=4.1.0",
    "wtforms>=3.2.1",
]
